WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173707
[WPE] Page should be closed on WebKitWebView dispose
https://bugs.webkit.org/show_bug.cgi?id=173707
Summary
[WPE] Page should be closed on WebKitWebView dispose
Carlos Garcia Campos
Reported
2017-06-22 02:58:01 PDT
In the GTK+ port it's done in the WebKitWebViewBase dispose implementation. It causes an assertion in web process when running TestMultiprocess TEST: bin/TestWebKitAPI/WPE/TestMultiprocess... (pid=21466) /wpe/WebKitWebContext/process-per-web-view: OK /wpe/WebKitWebContext/web-process-limit: Error sending IPC message: Broken pipe Error sending IPC message: Broken pipe OK /wpe/WebKitWebView/multiprocess-create-ready-close: OK ** ERROR:/home/cgarcia/src/git/gnome/WebKit-WPE/Tools/TestWebKitAPI/Tests/WebKitGLib/WebExtensionTest.cpp:131:void emitURIChanged(GDBusConnection*, const char*): assertion failed: (ok)
Attachments
Patch
(2.38 KB, patch)
2017-06-22 03:01 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-06-22 03:01:44 PDT
Created
attachment 313605
[details]
Patch
Build Bot
Comment 2
2017-06-22 03:03:49 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2017-06-22 04:17:05 PDT
Committed
r218688
: <
http://trac.webkit.org/changeset/218688
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug