[WPE] Page should be closed on WebKitWebView dispose https://bugs.webkit.org/show_bug.cgi?id=173707

Reviewed by Žan Doberšek.

In the GTK+ port it's done in the WebKitWebViewBase dispose implementation. It fixes TestMultiprocess.

* UIProcess/API/glib/WebKitWebView.cpp:
(webkitWebViewDispose): Call WKWPE::View::close().
* UIProcess/API/wpe/WPEView.cpp:
(WKWPE::View::close): Close the WebPageProxy.
* UIProcess/API/wpe/WPEView.h:

Canonical link: https://commits.webkit.org/190572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218688 268f45cc-cd09-0410-ab3c-d52691b4dbfc